--- a/notes/definitions/Chase-Like-Trees-and-Saturated-Chase-Like-Trees/index.html
+++ b/notes/definitions/Chase-Like-Trees-and-Saturated-Chase-Like-Trees/index.html
@@ -8,7 +8,7 @@
 <script src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/code-title.b35124ad8db0ba37162b886afb711cbc.min.js></script>
 <script src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/clipboard.c20857734e53a3fb733b7443879efa61.min.js></script>
 <script src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/callouts.7723cac461d613d118ee8bb8216b9838.min.js></script>
-<script>const BASE_URL="https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/",fetchData=Promise.all([fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/linkIndex.ba97c6e688f5864c973cb03cb0f8b2ea.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/contentIndex.e1d6229484d3e081896a241c335cce82.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,s=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",!0,!0);const o=document.getElementById("footer");if(o){const e=document.getElementById("graph-container");if(!e)return requestAnimationFrame(render);e.textContent="";const t=s&&!1;drawGraph("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",t,[{"/moc":"#4388cc"}],t?{centerForce:1,depth:-1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.5,linkDistance:1,opacityScale:3,repelForce:1,scale:1.4}:{centerForce:1,depth:1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.6,linkDistance:1,opacityScale:3,repelForce:2,scale:1.2})}},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
+<script>const BASE_URL="https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/",fetchData=Promise.all([fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/linkIndex.ba97c6e688f5864c973cb03cb0f8b2ea.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/contentIndex.b85b0ca93e66098b7d57610b302d71ea.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,s=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",!0,!0);const o=document.getElementById("footer");if(o){const e=document.getElementById("graph-container");if(!e)return requestAnimationFrame(render);e.textContent="";const t=s&&!1;drawGraph("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",t,[{"/moc":"#4388cc"}],t?{centerForce:1,depth:-1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.5,linkDistance:1,opacityScale:3,repelForce:1,scale:1.4}:{centerForce:1,depth:1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.6,linkDistance:1,opacityScale:3,repelForce:2,scale:1.2})}},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
     import { attachSPARouting } from "https:\/\/kory33.github.io\/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic\/js\/router.9d4974281069e9ebb189f642ae1e3ca2.min.js"
     attachSPARouting(init, render)
   </script></head><script async src="https://www.googletagmanager.com/gtag/js?id=G-XYFD95KB4J"></script>
@@ -46,65 +46,7 @@ Nov 7, 2022
 \def\rew{{\operatorname{rew}}}
 \def\ChaseStepDir{{\operatorname{ChaseStepDir}}}
 \def\SatTree{{\operatorname{SatTree}}}
-$$</div><xmp><blockquote>
-<p>This note builds on <a href="/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/notes/definitions/Rewriting-Existential-Lifting-and-Saturation" rel="noopener" class="internal-link" data-src="/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/notes/definitions/Rewriting-Existential-Lifting-and-Saturation">Rewriting, Existential Lifting and Saturation</a></p>
-</blockquote>
-<p>We shall define a tree structure that &ldquo;stems from a base instance $I$ and witnesses every possible conclusion that can be $\Sigma$-deduced from $I$&rdquo;. To make this precise, we define a few concepts in this section. So fix a finite set $\Sigma$ of head-normal GTGDs.</p>
-<p>We say that <em>a set $G$ of factual terms is $\Sigma$-guarded by a set of factual terms $\vec{t}$</em> when $G \subseteq \consts(\Sigma) \cup \vec{t}$ .</p>
-<p>Injective functions of the form $\nu: \mathbb{N} \rightarrow \Nulls$ will be referred to as <em>null-picking functions</em>. For a null-picking function $\nu$, a vector $\vec{y} = (y_1, \ldots, y_n)$ of variables and a factual substitution $\sigma$ whose domain is disjoint from $\vec{y}$, we define <em>the factual substitution $\sigma[\vec{y} \xrightarrow{\nu} \Nulls]$</em> with domain $\domain(\sigma) + \elems(\vec{y})$ that substitutes each $y_i$ to distinct nulls (chosen by $\nu$) and follows $\sigma$ elsewhere: $$
-\sigma
-<a
-rel="noopener" class="internal-link broken"
-data-src="x">\vec{y} \xrightarrow{\nu} \Nulls</a>=
-\begin{cases}
-n_{\nu(i)} & \text{if $x = y_i$} \
-\sigma(x) & \text{if $x \in \domain(\sigma)$}
-\end{cases}$$</p>
-<p>For a TGD $D = \forall \vec{x}. (\beta \rightarrow \exists \vec{y}. \eta)$, an instance $I$ and a factual substitution $\sigma$ that covers $\vec{x}$, we say that <em>$I$ can be $D$-chased with $\sigma$</em> when $\sigma(\beta) \subseteq I$. Intuitively, this means that the premise $\beta$ is witnessed by some facts in $I$, and $\sigma$ specifies which constant or null appearing in $I$ is witnessing each variable in $\vec{x}$.</p>
-<p>We shall describe how an instance can be &ldquo;extended&rdquo; by applying a GTGD. (<em>Question: this is not a proper extension of $I$ because we are only taking along $\Sigma$-guarded facts to the &ldquo;extension&rdquo;. Is there any intuition why we should we do this, or is this just a technical trick that is used to bound the size of tree-like chase proofs so as to make the decision procedure decidable? Will I get an insight about the intuition behind this limitation if I read the proof of chase-proof completeness?</em>) Given a null-picking function $\nu$, a GTGD $D = \forall \vec{x}. (\beta \rightarrow \exists \vec{y}. \eta)$ and an instance $I$ that can be $D$-chased with a factual substitution $\sigma$, we define</p>
-<ul>
-<li><em>the chase head $\chaseHead_\nu(D, \sigma)$</em> to be the fact $$\sigma
-<a
-rel="noopener" class="internal-link broken"
-data-src="%5ceta">\vec{y} \xrightarrow{\nu} \Nulls</a>.$$ Intuitively, this is a new fact generated from $I$ by applying the rule $D$.</li>
-<li><em>the one-step chase $\chase_\nu(I; D, \sigma)$ of $I$ with $(D, \sigma)$ (through $\nu$)</em> to be an instance defined by $$\set{\chaseHead_\nu(D, \sigma)} \cup \set{\\ F \in I\\ |\\ F \text{ is } \Sigma \text{-guarded by }\chaseHead_\nu(D, \sigma) \\ }.$$</li>
-</ul>
-<p>A <em>chase-like tree $T$ on an instance</em> is a directed rooted tree $(T_0, v_r)$ together with the <em>instance assignment</em> $\operatorname{Instance}_T: V(T_0) \rightarrow \Instances$ of instances to vertices.</p>
-<p>For a chase-like tree $T$ with the instance assignment $\operatorname{Instance}_T$, we define the instance $\TreeFacts(T)$ as the union $\bigcup \mathrm{im} \operatorname{Instance}_T$ of image of the instance assignment.</p>
-<p>We shall call a pair $(D, \sigma) \in \Sigma \times \FactualSubstitutions$ a <em>chase-step direction</em>, and write $\ChaseStepDir$ for the set $\Sigma \times \FactualSubstitutions$ of all chase-step directions. We call a finite (resp. infinite) sequence of chase-step directions a <em>finite (resp. infinite) chase-path</em>.</p>
-<hr>
-<p>TODO: we also need to encode &ldquo;the choice of facts that we take along $(D, \sigma)$ when applying the chase step&rdquo;, otherwise (I think) we can&rsquo;t quite argue about what we are trying to.</p>
-<hr>
-<p>Fix a coding function (hence a computable injection into $\mathbb{N}$) $$#: \ChaseStepDir^{&lt; \omega} \times \mathbb{N} \rightarrow \mathbb{N}$$ on pairs of a finite chase-path and a natural. Precompose $#$ to the canonical null-picking function $\nu_{\mathrm{id}}(i \in \mathbb{N}) = n_i$ and curry to obtain a $\ChaseStepDir^{&lt; \omega}$-indexed family $\set{ \widehat{#_\vec{d}}}_{\vec{d} \in \ChaseStepDir^{&lt; \omega}}$ of null-picking functions: More explicitly, for each $\vec{d} \in \ChaseStepDir^{&lt; \omega}$, we have $$
-\begin{align}
-\widehat{#_{\vec{d}}}\\ : \mathbb{N} & \rightarrow \Nulls\\
-i & \mapsto n_{#(\vec{d}, i)}
-\end{align}
-$$
-This family of null-picking functions will be used in the following definition to formally ensure that no null introduced in one branch is brought to its sibling branches.</p>
-<p>Given a base instance $I$, define, by induction on finite chase-paths $\vec{d} \in \ChaseStepDir^{&lt; \omega}$, the <em>canonical completion $\operatorname{CC}_\vec{d}(I)$ of $I$ along $\vec{d}$</em> by $$
-\begin{align}
-\operatorname{CC}<em>{()}(I) &= \FullSat</em>\Sigma(I) \
-\operatorname{CC}<em>{\vec{d} \concat (D, \sigma)}(I) &=
-\begin{cases}
-\FullSat</em>\Sigma(\chase_{\widehat{#<em>{\vec{d}}}}(\operatorname{CC}</em>\vec{d}(I); D, \sigma)) & \text{if $\operatorname{CC}_\vec{d}(I)$ can be $D$-chased with $\sigma$} \
-\emptyset & \text{otherwise}
-\end{cases}
-\end{align}
-$$
-For a base instance $I$ and a finite chase-path $\vec{d}$, we say that $\vec{d}$ is <em>a valid chase-path on $I$</em> if either $\operatorname{CC}_\vec{d}(I) \neq \emptyset$ or both $I$ and $\vec{d}$ are empty.</p>
-<p>Now define the <em>$\Sigma$-saturated chase-like tree $\SatTree_\Sigma(I)$ of a base instance $I$</em> with:</p>
-<ul>
-<li>the set $(\ChaseStepDir^{&lt; \omega})_{\mathrm{valid}}$ of <em>all</em> valid chase-paths on $I$ as the vertex set</li>
-<li>(labelled) edges of the form $\vec{p} \xrightarrow{d} \vec{p} \concat (d)$ for each pair of vertices (hence valid chase-paths) $\vec{p}$ and $\vec{p} \concat (d)$</li>
-<li>the instance assignment function defined by $$
-\begin{array}{c c}
-\operatorname{Instance}_{\SatTree_\Sigma(I)}:
-&(\ChaseStepDir^{&lt; \omega})_{\mathrm{valid}} & \longrightarrow &\Instances \\
-&\vec{d} &\longmapsto &\operatorname{CC}_\vec{d}(I)
-\end{array}
-$$</li>
-</ul></xmp><blockquote><p>This note builds on <a href=/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/notes/definitions/Rewriting-Existential-Lifting-and-Saturation rel=noopener class=internal-link data-src=/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/notes/definitions/Rewriting-Existential-Lifting-and-Saturation>Rewriting, Existential Lifting and Saturation</a></p></blockquote><p>We shall define a tree structure that &ldquo;stems from a base instance $I$ and witnesses every possible conclusion that can be $\Sigma$-deduced from $I$&rdquo;. To make this precise, we define a few concepts in this section. So fix a finite set $\Sigma$ of head-normal GTGDs.</p><p>We say that <em>a set $G$ of factual terms is $\Sigma$-guarded by a set of factual terms $\vec{t}$</em> when $G \subseteq \consts(\Sigma) \cup \vec{t}$ .</p><p>Injective functions of the form $\nu: \mathbb{N} \rightarrow \Nulls$ will be referred to as <em>null-picking functions</em>. For a null-picking function $\nu$, a vector $\vec{y} = (y_1, \ldots, y_n)$ of variables and a factual substitution $\sigma$ whose domain is disjoint from $\vec{y}$, we define <em>the factual substitution $\sigma[\vec{y} \xrightarrow{\nu} \Nulls]$</em> with domain $\domain(\sigma) + \elems(\vec{y})$ that substitutes each $y_i$ to distinct nulls (chosen by $\nu$) and follows $\sigma$ elsewhere: $$
+$$</div><blockquote><p>This note builds on <a href=/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/notes/definitions/Rewriting-Existential-Lifting-and-Saturation rel=noopener class=internal-link data-src=/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/notes/definitions/Rewriting-Existential-Lifting-and-Saturation>Rewriting, Existential Lifting and Saturation</a></p></blockquote><p>We shall define a tree structure that &ldquo;stems from a base instance $I$ and witnesses every possible conclusion that can be $\Sigma$-deduced from $I$&rdquo;. To make this precise, we define a few concepts in this section. So fix a finite set $\Sigma$ of head-normal GTGDs.</p><p>We say that <em>a set $G$ of factual terms is $\Sigma$-guarded by a set of factual terms $\vec{t}$</em> when $G \subseteq \consts(\Sigma) \cup \vec{t}$ .</p><p>Injective functions of the form $\nu: \mathbb{N} \rightarrow \Nulls$ will be referred to as <em>null-picking functions</em>. For a null-picking function $\nu$, a vector $\vec{y} = (y_1, \ldots, y_n)$ of variables and a factual substitution $\sigma$ whose domain is disjoint from $\vec{y}$, we define <em>the factual substitution $\sigma[\vec{y} \xrightarrow{\nu} \Nulls]$</em> with domain $\domain(\sigma) + \elems(\vec{y})$ that substitutes each $y_i$ to distinct nulls (chosen by $\nu$) and follows $\sigma$ elsewhere: $$
 \sigma
 <a rel=noopener class="internal-link broken" data-src=x>\vec{y} \xrightarrow{\nu} \Nulls</a>=
 \begin{cases}
