deploy: c587cbaf3faa8b67fa893d081d017a25db9900db

--- a/notes/definitions/Logic-Preliminaries/index.html
+++ b/notes/definitions/Logic-Preliminaries/index.html
@@ -8,7 +8,7 @@
 <script src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/code-title.b35124ad8db0ba37162b886afb711cbc.min.js></script>
 <script src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/clipboard.c20857734e53a3fb733b7443879efa61.min.js></script>
 <script src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/callouts.7723cac461d613d118ee8bb8216b9838.min.js></script>
-<script>const BASE_URL="https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/",fetchData=Promise.all([fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/linkIndex.ba97c6e688f5864c973cb03cb0f8b2ea.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/contentIndex.9cfedff658c1c07b6cb28da6d801909f.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,s=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",!0,!0);const o=document.getElementById("footer");if(o){const e=document.getElementById("graph-container");if(!e)return requestAnimationFrame(render);e.textContent="";const t=s&&!1;drawGraph("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",t,[{"/moc":"#4388cc"}],t?{centerForce:1,depth:-1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.5,linkDistance:1,opacityScale:3,repelForce:1,scale:1.4}:{centerForce:1,depth:1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.6,linkDistance:1,opacityScale:3,repelForce:2,scale:1.2})}},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
+<script>const BASE_URL="https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/",fetchData=Promise.all([fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/linkIndex.ba97c6e688f5864c973cb03cb0f8b2ea.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/contentIndex.474fb8886576e039d7db2d9e64773cd4.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,s=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",!0,!0);const o=document.getElementById("footer");if(o){const e=document.getElementById("graph-container");if(!e)return requestAnimationFrame(render);e.textContent="";const t=s&&!1;drawGraph("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",t,[{"/moc":"#4388cc"}],t?{centerForce:1,depth:-1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.5,linkDistance:1,opacityScale:3,repelForce:1,scale:1.4}:{centerForce:1,depth:1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.6,linkDistance:1,opacityScale:3,repelForce:2,scale:1.2})}},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
     import { attachSPARouting } from "https:\/\/kory33.github.io\/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic\/js\/router.9d4974281069e9ebb189f642ae1e3ca2.min.js"
     attachSPARouting(init, render)
   </script></head><script async src="https://www.googletagmanager.com/gtag/js?id=G-XYFD95KB4J"></script>
@@ -46,95 +46,6 @@ Nov 7, 2022
 \def\rew{{\operatorname{rew}}}
 \def\ChaseStepDir{{\operatorname{ChaseStepDir}}}
 \def\SatTree{{\operatorname{SatTree}}}
-$$</div>'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'<blockquote><p>This note builds on <a href=/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/notes/definitions/General-Notations rel=noopener class=internal-link data-src=/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/notes/definitions/General-Notations>General Notations</a>.</p></blockquote><p>This note mainly pulls definitions from
+$$</div><blockquote><p>This note builds on <a href=/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/notes/definitions/General-Notations rel=noopener class=internal-link data-src=/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/notes/definitions/General-Notations>General Notations</a>.</p></blockquote><p>This note mainly pulls definitions from
 <a href=https://krr-oxford.github.io/Guarded-saturation/files/p2537-benedikt-long.pdf rel=noopener>Rewriting the Infinite Chase</a>, but with quite a lot of modifications.</p><p>We assume the countably infinite collection $\Vars = \set{x_1, x_2, x_3, \ldots}$ of variables, the ordered set $\Nulls = \set{\\ n_i \mid i \in \mathbb{N}\\ }$ of <em>labelled nulls</em> and some given fixed (at most countable) set $\Consts = \set{c_1, c_2, \ldots}$ of constants.</p><p>Given a finite collection $\Predicates = \set{P_1, P_2, \ldots, P_N}$ of predicates with finite arities $\Arity(P_i)$ associated to each of them (both of which we will not explicitly write from now on), we define:</p><ul><li><em>the set $\Terms$ of (non-null) terms</em> as $\Vars \cup \Consts$</li><li><em>the set $\NullableTerms$ of nullable terms</em> as $\Vars \cup \Consts \cup \Nulls$</li><li><em>the set $\FactualTerms$ of factual terms</em> as $\Nulls \cup \Consts$</li><li><em>the set $\Atoms$ of atomic formulae (resp. the set $\Facts$ of facts)</em> to be a set of formal expression $P(t_1, t_2, \ldots, t_{\Arity(P)})$ with $P \in \Predicates$, $t_i \in \Terms$ (resp. $\FactualTerms$) for each $1 \leq i \leq \Arity(P)$</li><li><em>the set $\Formulae$ of (first-order) formulas under the sigunature $(\Predicates, \Consts)$</em> to be a set of formal expressions inductively built up from $\Atoms$ using unary connective $\neg$, binary connectives $\wedge, \vee, \rightarrow$ and quantifiers $\exists x.$ and $\forall x.$ (where $x \in \Vars$)</li></ul><p>Semantics (interpretation, logical-consequence relation and truth) of formulae is defined using the standard terminology. We also follow standard conventions concerning variables being <em>bound</em> and <em>free</em>.</p><p>For brevity, we adopt the following notational conventions:</p><ul><li>for a an atomic formula $P(t_1, \ldots, t_{\Arity(P)})$, we simply write it as $P(\vec{t})$ with an intention that $\vec{t} = (t_1, \ldots, t_{\Arity(P)})$.</li><li>for a formula of a form $\exists x_1. \exists x_2. \ldots \exists x_n. \phi$, we simply write it as $\exists \vec{x}. \phi$ with an intention that $\vec{x} = (x_1, \ldots, x_n)$.</li></ul><p>For conjunctions $F = \bigwedge_{1 \leq i \leq n} F_i$ and $G = \bigwedge_{1 \leq j \leq m} G_j$ of formulae, we write $F \subseteq G$ when for each $1 \leq i \leq n$, $F_i$ appears in $G$. That is, for each $1 \leq i \leq n$, there exists $1 \leq j \leq m$ with $F_i = G_j$.</p><p>We now define subclasses of objects defined above:</p><ul><li>a fact $P(\vec{t})$ is <em>a base fact</em> if $\vec{t}$ contains only constants (hence no nulls). We write $\BaseFacts$ for the set of base facts.</li><li><em>an instance</em> is a finite set of facts. We write $\Instances$ for the set $\mathcal{P}_{&lt; \omega}(\Facts)$.</li><li>an instance $I$ is <em>a base instance</em> if each fact in $I$ is a base fact.</li><li>a formula is <em>a rectified formula</em> if no variable is bound twice, and no variable occurs both bound and free. By a standard renaming argument, any first-order formula is equivalent to a rectified formula. Hence from now on we will assume all formulae to be rectified.</li><li>a formula is closed when every occurence of variable is bound.</li><li>a closed formula is a <em>Tuple-Generating Dependency (or TGD)</em> if it is of the form $\forall \vec{x}. (\beta \rightarrow \exists \vec{y}. \eta)$ where $\beta$ and $\eta$ are conjunctions of atoms with $\eta$ nonempty. In such a formula, $\beta$ is referred to as the <em>body</em> and $\eta$ is referred to as the <em>head</em> of this TGD.</li><li>a TGD $\forall \vec{x}. (\beta \rightarrow \exists \vec{y}. \eta)$ is <em>a full TGD</em> if $\vec{y}$ is empty, i.e. it is of the form $\forall \vec{x}. \beta \rightarrow \eta$.</li><li>a full TGD is <em>a Datalog rule</em> if its head contains exactly one atom. A finite set of Datalog rules is is called <em>a Datalog program</em>.</li><li>a TGD is in a head-normal form if it is either a <em>Datalog rule</em>, or each atom in the head contains at least one existentially quantified variable.</li><li>a TGD $\forall \vec{x}. (\beta \rightarrow \exists \vec{y}. \eta)$ is a <em>guarded-TGD (or GTGD)</em> if $\beta$ contains an atom $P(\vec{t})$ such that $\vec{t} \supseteq \vec{x}$.</li><li>a Conjunctive Query (CQ) is a formula of the form $\exists \vec{x}. \bigwedge_i A_i$ where each $A_i$ is an atomic formula.</li></ul><p>We say that a Datalog program $\Sigma_\rew$ is a <em>Datalog rewriting</em> of a finite collection $\Sigma$ of GTDGs when for every base instance $I$ and a base fact $F$, $$I \wedge \Sigma \models F \Longleftrightarrow I \wedge \Sigma_\rew \models F.$$
 A <em>factual substitution</em> is a partial function $\sigma: \Vars \rightharpoonup \FactualTerms$ with a finite domain. A factual substitution canonically extends to a partial function $\Atoms \rightharpoonup \Facts$ that is defined on atoms all of whose variables are in the domain of $\sigma$. We identity this extension of $\sigma$ with $\sigma$ by an abuse of notation. We write $\FactualSubstitutions = (\Vars \rightharpoonup \FactualTerms)_{&lt; \omega}$ for the countable set of all factual substitutions.</p><p>We say that a factual substitution $\sigma$ <em>covers</em> a set $\vec{y}$ of variables when $\elems(\vec{y}) \subseteq \domain(\sigma)$, and that $\sigma$ <em>covers</em> an atom $A$ (resp. a vector of atoms $\vec{A}$) when $\sigma$ covers the set $\vars(A)$ (resp. $\vars(\vec{A})$) of variables in $A$ (resp. $\vec{A}$).</p><p>We say that a (potentially infinite) set $\mathcal{F}$ of facts <em>witnesses a closed conjunctive query $\exists \vec{x}. \bigwedge_{1 \leq i \leq n} A_i$</em> if there exists a factual substitution $\sigma$ covering $\vec{A}$ such that $$\set{\\ \sigma(A_i) \mid 1 \leq i \leq n \\ } \subseteq \mathcal{F}.$$</p></article><hr><div class=page-end id=footer><div class=backlinks-container><h3>Backlinks</h3><ul class=backlinks><li>No backlinks found</li></ul></div><div><script src=https://cdn.jsdelivr.net/npm/d3@6.7.0/dist/d3.min.js integrity="sha256-+7jaYCp29O1JusNWHaYtgUn6EhuP0VaFuswhNV06MyI=" crossorigin=anonymous></script><h3>Interactive Graph</h3><div id=graph-container></div><style>:root{--g-node:var(--secondary);--g-node-active:var(--primary);--g-node-inactive:var(--visited);--g-link:var(--outlinegray);--g-link-active:#5a7282}</style><script src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/graph.abd4bc2af3869a96524d7d23b76152c7.js></script></div></div><div id=contact_buttons><footer><p>Made by Ryosuke Kondo using <a href=https://github.com/jackyzha0/quartz>Quartz</a>, © 2022</p><ul><li><a href=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/>Home</a></li><li><a href=https://twitter.com/Kory__3>Twitter</a></li><li><a href=https://github.com/kory33>Github</a></li></ul></footer></div></div></body></html>
