--- a/notes/definitions/Chase-Like-Trees-and-Saturated-Chase-Like-Trees/index.html
+++ b/notes/definitions/Chase-Like-Trees-and-Saturated-Chase-Like-Trees/index.html
@@ -8,7 +8,7 @@
 <script src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/code-title.b35124ad8db0ba37162b886afb711cbc.min.js></script>
 <script src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/clipboard.c20857734e53a3fb733b7443879efa61.min.js></script>
 <script src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/callouts.7723cac461d613d118ee8bb8216b9838.min.js></script>
-<script>const BASE_URL="https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/",fetchData=Promise.all([fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/linkIndex.ba97c6e688f5864c973cb03cb0f8b2ea.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/contentIndex.9cfedff658c1c07b6cb28da6d801909f.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,s=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",!0,!0);const o=document.getElementById("footer");if(o){const e=document.getElementById("graph-container");if(!e)return requestAnimationFrame(render);e.textContent="";const t=s&&!1;drawGraph("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",t,[{"/moc":"#4388cc"}],t?{centerForce:1,depth:-1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.5,linkDistance:1,opacityScale:3,repelForce:1,scale:1.4}:{centerForce:1,depth:1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.6,linkDistance:1,opacityScale:3,repelForce:2,scale:1.2})}},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
+<script>const BASE_URL="https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/",fetchData=Promise.all([fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/linkIndex.ba97c6e688f5864c973cb03cb0f8b2ea.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/contentIndex.474fb8886576e039d7db2d9e64773cd4.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,s=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",!0,!0);const o=document.getElementById("footer");if(o){const e=document.getElementById("graph-container");if(!e)return requestAnimationFrame(render);e.textContent="";const t=s&&!1;drawGraph("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",t,[{"/moc":"#4388cc"}],t?{centerForce:1,depth:-1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.5,linkDistance:1,opacityScale:3,repelForce:1,scale:1.4}:{centerForce:1,depth:1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.6,linkDistance:1,opacityScale:3,repelForce:2,scale:1.2})}},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
     import { attachSPARouting } from "https:\/\/kory33.github.io\/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic\/js\/router.9d4974281069e9ebb189f642ae1e3ca2.min.js"
     attachSPARouting(init, render)
   </script></head><script async src="https://www.googletagmanager.com/gtag/js?id=G-XYFD95KB4J"></script>
@@ -46,95 +46,7 @@ Nov 8, 2022
 \def\rew{{\operatorname{rew}}}
 \def\ChaseStepDir{{\operatorname{ChaseStepDir}}}
 \def\SatTree{{\operatorname{SatTree}}}
-$$</div>'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'
-'<blockquote><p>This note builds on <a href=/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/notes/definitions/Rewriting-Existential-Lifting-and-Saturation rel=noopener class=internal-link data-src=/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/notes/definitions/Rewriting-Existential-Lifting-and-Saturation>Rewriting, Existential Lifting and Saturation</a></p></blockquote><p>We shall define a tree structure that &ldquo;stems from a base instance $I$ and witnesses every possible conclusion that can be $\Sigma$-deduced from $I$&rdquo;. To make this precise, we define a few concepts in this section. So fix a finite set $\Sigma$ of head-normal GTGDs.</p><p>We say that <em>a set $G$ of factual terms is $\Sigma$-guarded by a set of factual terms $\vec{t}$</em> when $G \subseteq \consts(\Sigma) \cup \vec{t}$ .</p><p>Injective functions of the form $\nu: \mathbb{N} \rightarrow \Nulls$ will be referred to as <em>null-picking functions</em>. For a null-picking function $\nu$, a vector $\vec{y} = (y_1, \ldots, y_n)$ of variables and a factual substitution $\sigma$ whose domain is disjoint from $\vec{y}$, we define <em>the factual substitution $\sigma[\vec{y} \xrightarrow{\nu} \Nulls]$</em> with domain $\domain(\sigma) + \elems(\vec{y})$ that substitutes each $y_i$ to distinct nulls (chosen by $\nu$) and follows $\sigma$ elsewhere: $$
+$$</div><blockquote><p>This note builds on <a href=/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/notes/definitions/Rewriting-Existential-Lifting-and-Saturation rel=noopener class=internal-link data-src=/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/notes/definitions/Rewriting-Existential-Lifting-and-Saturation>Rewriting, Existential Lifting and Saturation</a></p></blockquote><p>We shall define a tree structure that &ldquo;stems from a base instance $I$ and witnesses every possible conclusion that can be $\Sigma$-deduced from $I$&rdquo;. To make this precise, we define a few concepts in this section. So fix a finite set $\Sigma$ of head-normal GTGDs.</p><p>We say that <em>a set $G$ of factual terms is $\Sigma$-guarded by a set of factual terms $\vec{t}$</em> when $G \subseteq \consts(\Sigma) \cup \vec{t}$ .</p><p>Injective functions of the form $\nu: \mathbb{N} \rightarrow \Nulls$ will be referred to as <em>null-picking functions</em>. For a null-picking function $\nu$, a vector $\vec{y} = (y_1, \ldots, y_n)$ of variables and a factual substitution $\sigma$ whose domain is disjoint from $\vec{y}$, we define <em>the factual substitution $\sigma[\vec{y} \xrightarrow{\nu} \Nulls]$</em> with domain $\domain(\sigma) + \elems(\vec{y})$ that substitutes each $y_i$ to distinct nulls (chosen by $\nu$) and follows $\sigma$ elsewhere: $$
 \sigma
 [\vec{y} \xrightarrow{\nu} \Nulls](x)=
 \begin{cases}
