deploy: 49ede10186aeaaab0c10f7e9416aa6af523fdcc4

--- a/notes/Decomposing-the-Larger-Problem-into-Smaller-Subproblems/index.html
+++ b/notes/Decomposing-the-Larger-Problem-into-Smaller-Subproblems/index.html
@@ -7,14 +7,14 @@
 <script src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/code-title.b35124ad8db0ba37162b886afb711cbc.min.js></script>
 <script src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/clipboard.c20857734e53a3fb733b7443879efa61.min.js></script>
 <script src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/callouts.7723cac461d613d118ee8bb8216b9838.min.js></script>
-<script>const BASE_URL="https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/",fetchData=Promise.all([fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/linkIndex.24f17f9e333a39f8a11366ccf09d5d4b.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/contentIndex.86df4eb058ca78e0469d7dbb4f017445.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,s=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",!0,!0);const o=document.getElementById("footer");if(o){const e=document.getElementById("graph-container");if(!e)return requestAnimationFrame(render);e.textContent="";const t=s&&!1;drawGraph("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",t,[{"/moc":"#4388cc"}],t?{centerForce:1,depth:-1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.5,linkDistance:1,opacityScale:3,repelForce:1,scale:1.4}:{centerForce:1,depth:1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.6,linkDistance:1,opacityScale:3,repelForce:2,scale:1.2})}},init=()=>{addCopyButtons(),addTitleToCodeBlocks(),MathJax.typeset()}</script><script type=module>
+<script>const BASE_URL="https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/",fetchData=Promise.all([fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/linkIndex.24f17f9e333a39f8a11366ccf09d5d4b.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/indices/contentIndex.8b601c8b701b5b265986822544da4cee.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,s=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",!0,!0);const o=document.getElementById("footer");if(o){const e=document.getElementById("graph-container");if(!e)return requestAnimationFrame(render);e.textContent="";const t=s&&!1;drawGraph("https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic",t,[{"/moc":"#4388cc"}],t?{centerForce:1,depth:-1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.5,linkDistance:1,opacityScale:3,repelForce:1,scale:1.4}:{centerForce:1,depth:1,enableDrag:!0,enableLegend:!1,enableZoom:!0,fontSize:.6,linkDistance:1,opacityScale:3,repelForce:2,scale:1.2})}},init=()=>{addCopyButtons(),addTitleToCodeBlocks(),MathJax.typeset()}</script><script type=module>
     import { attachSPARouting } from "https:\/\/kory33.github.io\/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic\/js\/router.9d4974281069e9ebb189f642ae1e3ca2.min.js"
     attachSPARouting(init, render)
   </script></head><script async src="https://www.googletagmanager.com/gtag/js?id=G-XYFD95KB4J"></script>
 <script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag("js",new Date),gtag("config","G-XYFD95KB4J",{anonymize_ip:!1})}</script><body><div id=search-container><div id=search-space><input autocomplete=off id=search-bar name=search type=text aria-label=Search placeholder="Search for something..."><div id=results-container></div></div></div><script src=https://cdn.jsdelivr.net/npm/flexsearch@0.7.21/dist/flexsearch.bundle.js integrity="sha256-i3A0NZGkhsKjVMzFxv3ksk0DZh3aXqu0l49Bbh0MdjE=" crossorigin=anonymous defer></script>
 <script defer src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/full-text-search.24827f874defbbc6d529926cbfcfb493.min.js></script><div class=singlePage><header><h1 id=page-title><a href=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/>Optimized Reasoning with Guarded Logic</a></h1><div class=spacer></div><div id=search-icon><p>Search</p><svg tabindex="0" aria-labelledby="title desc" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.9 19.7"><title id="title">Search Icon</title><desc id="desc">Icon to open search</desc><g class="search-path" fill="none"><path stroke-linecap="square" d="M18.5 18.3l-5.4-5.4"/><circle cx="8" cy="8" r="7"/></g></svg></div><div class=darkmode><input class=toggle id=darkmode-toggle type=checkbox tabindex=-1>
 <label id=toggle-label-light for=darkmode-toggle tabindex=-1><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="dayIcon" viewBox="0 0 35 35" style="enable-background:new 0 0 35 35"><title>Light Mode</title><path d="M6 17.5C6 16.672 5.328 16 4.5 16h-3C.672 16 0 16.672.0 17.5S.672 19 1.5 19h3C5.328 19 6 18.328 6 17.5zM7.5 26c-.414.0-.789.168-1.061.439l-2 2C4.168 28.711 4 29.086 4 29.5 4 30.328 4.671 31 5.5 31c.414.0.789-.168 1.06-.44l2-2C8.832 28.289 9 27.914 9 27.5 9 26.672 8.329 26 7.5 26zm10-20C18.329 6 19 5.328 19 4.5v-3C19 .672 18.329.0 17.5.0S16 .672 16 1.5v3C16 5.328 16.671 6 17.5 6zm10 3c.414.0.789-.168 1.06-.439l2-2C30.832 6.289 31 5.914 31 5.5 31 4.672 30.329 4 29.5 4c-.414.0-.789.168-1.061.44l-2 2C26.168 6.711 26 7.086 26 7.5 26 8.328 26.671 9 27.5 9zM6.439 8.561C6.711 8.832 7.086 9 7.5 9 8.328 9 9 8.328 9 7.5c0-.414-.168-.789-.439-1.061l-2-2C6.289 4.168 5.914 4 5.5 4 4.672 4 4 4.672 4 5.5c0 .414.168.789.439 1.06l2 2.001zM33.5 16h-3c-.828.0-1.5.672-1.5 1.5s.672 1.5 1.5 1.5h3c.828.0 1.5-.672 1.5-1.5S34.328 16 33.5 16zM28.561 26.439C28.289 26.168 27.914 26 27.5 26c-.828.0-1.5.672-1.5 1.5.0.414.168.789.439 1.06l2 2C28.711 30.832 29.086 31 29.5 31c.828.0 1.5-.672 1.5-1.5.0-.414-.168-.789-.439-1.061l-2-2zM17.5 29c-.829.0-1.5.672-1.5 1.5v3c0 .828.671 1.5 1.5 1.5s1.5-.672 1.5-1.5v-3C19 29.672 18.329 29 17.5 29zm0-22C11.71 7 7 11.71 7 17.5S11.71 28 17.5 28 28 23.29 28 17.5 23.29 7 17.5 7zm0 18c-4.136.0-7.5-3.364-7.5-7.5s3.364-7.5 7.5-7.5 7.5 3.364 7.5 7.5S21.636 25 17.5 25z"/></svg></label><label id=toggle-label-dark for=darkmode-toggle tabindex=-1><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="nightIcon" viewBox="0 0 100 100" style="enable-background='new 0 0 100 100'"><title>Dark Mode</title><path d="M96.76 66.458c-.853-.852-2.15-1.064-3.23-.534-6.063 2.991-12.858 4.571-19.655 4.571C62.022 70.495 50.88 65.88 42.5 57.5 29.043 44.043 25.658 23.536 34.076 6.47c.532-1.08.318-2.379-.534-3.23-.851-.852-2.15-1.064-3.23-.534-4.918 2.427-9.375 5.619-13.246 9.491-9.447 9.447-14.65 22.008-14.65 35.369.0 13.36 5.203 25.921 14.65 35.368s22.008 14.65 35.368 14.65c13.361.0 25.921-5.203 35.369-14.65 3.872-3.871 7.064-8.328 9.491-13.246C97.826 68.608 97.611 67.309 96.76 66.458z"/></svg></label></div></header><article><h1>Decomposing the Larger Problem into Smaller Subproblems</h1><p class=meta>Last updated
-Nov 18, 2022
+Nov 21, 2022
 <a href=https://github.com/kory33/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/tree/master/content/notes/Decomposing%20the%20Larger%20Problem%20into%20Smaller%20Subproblems.md rel=noopener>Edit Source</a></p><ul class=tags><li><a href=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/tags/notes/>Notes</a></li><li><a href=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/tags/idea/>Idea</a></li></ul><div>$$
 \newcommand\isDefinedAt[2]{{#1 \downarrow #2}}
 \def\domain{{\operatorname{dom}}}
@@ -107,21 +107,103 @@ $$</div><blockquote><p>We shall build on definitions given in <a href=/obsidian-
 </span></span><span class=line><span class=cl>    (τ_t, σ_t) &lt;- nondeterministically guess a valid generative chase-direction on (I, Σ)
 </span></span><span class=line><span class=cl>    σ_V &lt;- nondeterministically guess an assignment of nulls in the tentacle hanging from (τ_t, σ_t) for each variable in V
 </span></span><span class=line><span class=cl>
-</span></span><span class=line><span class=cl>    Q&#39;_V := conjunction of all atoms in Q that only mention variables from V or σ_base_domain, with all variables in σ_base_domain substituted using σ_base
+</span></span><span class=line><span class=cl>    Q&#39;_V := conjunction of all atoms in Q that only mention variables from V or σ_base_domain
 </span></span><span class=line><span class=cl>    T := compute SatTree_Σ(I) along all introduction points of nulls that are in the image of σ_V
 </span></span><span class=line><span class=cl>
-</span></span><span class=line><span class=cl>    for each Q&#39; in Q&#39;_V:
+</span></span><span class=line><span class=cl>    for each Q&#39; in σ_base(σ_V(Q&#39;_V)):
 </span></span><span class=line><span class=cl>      if NOT (Q&#39; in some node of T):
 </span></span><span class=line><span class=cl>        REJECT
 </span></span><span class=line><span class=cl>      fi
 </span></span><span class=line><span class=cl>    done
 </span></span><span class=line><span class=cl>
-</span></span><span class=line><span class=cl>	// at this point, σ_V witnesses the subquery Q&#39;_V
+</span></span><span class=line><span class=cl>	// at this point, σ_V witnesses the non-existential subquery Q&#39;_V
 </span></span><span class=line><span class=cl>  done
 </span></span><span class=line><span class=cl>
 </span></span><span class=line><span class=cl>  ACCEPT
-</span></span></code></pre></td></tr></table></div></div><p>This is only a semi-decision nondeterministic algorithm, since the set of choices that can be made for <code>σ_V</code> is in general infinite. It turns out that this can be fixed if we suppose an oracle for the following problem:</p><blockquote><p><strong>Definition</strong>. <code>WitnessedUnderTentacle(τ_t, σ_t, I, Σ, Q')</code> is the problem of deciding whether a binary conjunctive query $Q&rsquo;$ is witnessed on a tentacle of $\SatTree_\Sigma(I)$ hanging from $(\tau_t, \sigma_t)$.</p></blockquote><p>So now, assume that an oracle for the problem <code>WitnessedUnderSubTree(-, -, -, -, -)</code> has been given. Then we have the following nondeterministic algorithm, which we call <code>AnswerQueryNonDet2</code>:</p><div class=highlight><div class=chroma><table class=lntable><tr><td class=lntd><pre tabindex=0 class=chroma><code><span class=lnt>1
-</span><span class=lnt>2
-</span></code></pre></td><td class=lntd><pre tabindex=0 class=chroma><code class=language-fallback data-lang=fallback><span class=line><span class=cl>AnswerQueryNonDet2(I, Σ, Q):
-</span></span><span class=line><span class=cl>  TODO
+</span></span></code></pre></td></tr></table></div></div><p>This is only a semi-decision nondeterministic algorithm, since the set of choices that can be made for <code>σ_V</code> is in general infinite. It turns out that this can be fixed immediately if we suppose an oracle for the following problem:</p><blockquote><p><strong>Definition</strong>. <code>WitnessedUnderTentacle(τ_t, σ_t, I, Σ, Q')</code> is the problem of deciding whether a binary conjunctive query $Q&rsquo;$ is witnessed on a tentacle of $\SatTree_\Sigma(I)$ hanging from $(\tau_t, \sigma_t)$.</p></blockquote><p>So now, assume that an oracle for the problem <code>WitnessedUnderSubTree(-, -, -, -, -)</code> has been given. Then we have the following nondeterministic algorithm, which we call <code>AnswerQueryNonDet2</code>:</p><div class=highlight><div class=chroma><table class=lntable><tr><td class=lntd><pre tabindex=0 class=chroma><code><span class=lnt> 1
+</span><span class=lnt> 2
+</span><span class=lnt> 3
+</span><span class=lnt> 4
+</span><span class=lnt> 5
+</span><span class=lnt> 6
+</span><span class=lnt> 7
+</span><span class=lnt> 8
+</span><span class=lnt> 9
+</span><span class=lnt>10
+</span><span class=lnt>11
+</span><span class=lnt>12
+</span><span class=lnt>13
+</span><span class=lnt>14
+</span><span class=lnt>15
+</span><span class=lnt>16
+</span><span class=lnt>17
+</span><span class=lnt>18
+</span><span class=lnt>19
+</span><span class=lnt>20
+</span><span class=lnt>21
+</span><span class=lnt>22
+</span><span class=lnt>23
+</span><span class=lnt>24
+</span><span class=lnt>25
+</span><span class=lnt>26
+</span><span class=lnt>27
+</span><span class=lnt>28
+</span><span class=lnt>29
+</span><span class=lnt>30
+</span><span class=lnt>31
+</span><span class=lnt>32
+</span><span class=lnt>33
+</span><span class=lnt>34
+</span><span class=lnt>35
+</span><span class=lnt>36
+</span><span class=lnt>37
+</span><span class=lnt>38
+</span><span class=lnt>39
+</span><span class=lnt>40
+</span><span class=lnt>41
+</span><span class=lnt>42
+</span><span class=lnt>43
+</span></code></pre></td><td class=lntd><pre tabindex=0 class=chroma><code class=language-diff data-lang=diff><span class=line><span class=cl>AnswerQueryNonDet2(I, Σ, Q):
+</span></span><span class=line><span class=cl>  σ_base_domain &lt;- nondeterministically guess a subset of vec{x}
+</span></span><span class=line><span class=cl>  σ_base &lt;- nondeterministically guess an assignment of constants to each variable in σ_base_domain
+</span></span><span class=line><span class=cl>
+</span></span><span class=line><span class=cl>  masked_H := (σ_base_domain)-masked query structure hypergraph of Q
+</span></span><span class=line><span class=cl>  SatBase := Sat_Σ(I)
+</span></span><span class=line><span class=cl>
+</span></span><span class=line><span class=cl>  // check the condition for the base substitution
+</span></span><span class=line><span class=cl>  for each j in J:
+</span></span><span class=line><span class=cl>    if all variables in Q_j(vec{x&#39;}_j) are in σ_base_domain:
+</span></span><span class=line><span class=cl>      if σ_base(Q_j(vec{x&#39;}_j)) ∉ SatBase:
+</span></span><span class=line><span class=cl>        REJECT
+</span></span><span class=line><span class=cl>      fi
+</span></span><span class=line><span class=cl>    fi
+</span></span><span class=line><span class=cl>  done
+</span></span><span class=line><span class=cl>
+</span></span><span class=line><span class=cl>  // nondeterministically guess fragments
+</span></span><span class=line><span class=cl>  for each V in the connected components of masked_H:
+</span></span><span class=line><span class=cl>    (τ_t, σ_t) &lt;- nondeterministically guess a valid generative chase-direction on (I, Σ)
+</span></span><span class=line><span class=cl>
+</span></span><span class=line><span class=cl><span class=gd>-    σ_V &lt;- nondeterministically guess an assignment of nulls in the tentacle hanging from (τ_t, σ_t) for each variable in V
+</span></span></span><span class=line><span class=cl><span class=gd>-
+</span></span></span><span class=line><span class=cl><span class=gd>-    Q&#39;_V := conjunction of all atoms in Q that only mention variables from V or σ_base_domain
+</span></span></span><span class=line><span class=cl><span class=gd>-    T := compute SatTree_Σ(I) along all introduction points of nulls that are in the image of σ_V
+</span></span></span><span class=line><span class=cl><span class=gd>-
+</span></span></span><span class=line><span class=cl><span class=gd>-    for each Q&#39; in σ_base(σ_V(Q&#39;_V)):
+</span></span></span><span class=line><span class=cl><span class=gd>-      if NOT (Q&#39; in some node of T):
+</span></span></span><span class=line><span class=cl><span class=gd>-        REJECT
+</span></span></span><span class=line><span class=cl><span class=gd>-      fi
+</span></span></span><span class=line><span class=cl><span class=gd>-    done
+</span></span></span><span class=line><span class=cl><span class=gd>-
+</span></span></span><span class=line><span class=cl><span class=gd>-	// at this point, σ_V witnesses the non-existential subquery Q&#39;_V
+</span></span></span><span class=line><span class=cl><span class=gd></span><span class=gi>+    A&#39;_V := conjunction of all atoms in Q that only mention variables from V or σ_base_domain, with all variables in σ_base_domain substituted using σ_base
+</span></span></span><span class=line><span class=cl><span class=gi>+    Q&#39;_V = ∃{x in V}. σ_base(Q&#39;_V)
+</span></span></span><span class=line><span class=cl><span class=gi>+
+</span></span></span><span class=line><span class=cl><span class=gi>+    if NOT WitnessedUnderSubTree(τ_t, σ_t, I, Σ, Q&#39;_V):
+</span></span></span><span class=line><span class=cl><span class=gi>+      REJECT
+</span></span></span><span class=line><span class=cl><span class=gi>+    fi
+</span></span></span><span class=line><span class=cl><span class=gi>+
+</span></span></span><span class=line><span class=cl><span class=gi>+    // at this point, there exists a σ_V witnessing the existential subquery Q&#39;_V
+</span></span></span><span class=line><span class=cl><span class=gi></span>  done
+</span></span><span class=line><span class=cl>
+</span></span><span class=line><span class=cl>  ACCEPT
 </span></span></code></pre></td></tr></table></div></div><section class=footnotes role=doc-endnotes><hr><ol><li id=fn:1 role=doc-endnote><p>In a sense of an algorithm running on nondeterministic turing machines, so <code>ACCEPT</code>s if <em>any</em> nondeterministic branch <code>ACCEPT</code>s, and <code>REJECT</code>s if <em>no</em> nondeterministic branch <code>ACCEPT</code>s.&#160;<a href=#fnref:1 class=footnote-backref role=doc-backlink>&#8617;&#xfe0e;</a></p></li></ol></section></article><hr><div class=page-end id=footer><div class=backlinks-container><h3>Backlinks</h3><ul class=backlinks><li>No backlinks found</li></ul></div><div><script src=https://cdn.jsdelivr.net/npm/d3@6.7.0/dist/d3.min.js integrity="sha256-+7jaYCp29O1JusNWHaYtgUn6EhuP0VaFuswhNV06MyI=" crossorigin=anonymous></script><h3>Interactive Graph</h3><div id=graph-container></div><style>:root{--g-node:var(--secondary);--g-node-active:var(--primary);--g-node-inactive:var(--visited);--g-link:var(--outlinegray);--g-link-active:#5a7282}</style><script src=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/js/graph.abd4bc2af3869a96524d7d23b76152c7.js></script></div></div><div id=contact_buttons><footer><p>Made by Ryosuke Kondo using <a href=https://github.com/jackyzha0/quartz>Quartz</a>, © 2022</p><ul><li><a href=https://kory33.github.io/obsidian-vault--research-notes--optimized-reasoning-with-guarded-logic/>Home</a></li><li><a href=https://twitter.com/Kory__3>Twitter</a></li><li><a href=https://github.com/kory33>Github</a></li></ul></footer></div></div></body></html>
